k8s/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: default
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
